Versões submites/1 - Compile Time Error.txt
function_add_or_list_flights.c: In function 'check_flight':
function_add_or_list_flights.c:93:14: error: implicit declaration of function 'check_duplicate_airport'; did you mean 'check_duplicate_flight'? [-Werror=implicit-function-declaration]
     else if (check_duplicate_airport(flight.airport_departure))
              ^~~~~~~~~~~~~~~~~~~~~~~
              check_duplicate_flight
cc1: all warnings being treated as errors
function_list__departure_flights.c: In function 'list_departure_flights':
function_list__departure_flights.c:62:9: error: implicit declaration of function 'check_duplicate_airport' [-Werror=implicit-function-declaration]
     if (check_duplicate_airport(id))
         ^~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
function_list_arrival_flights.c: In function 'list_arrival_flights':
function_list_arrival_flights.c:76:9: error: implicit declaration of function 'check_duplicate_airport' [-Werror=implicit-function-declaration]
     if (check_duplicate_airport(id))
         ^~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
global_defines.c:33: error: ISO C forbids an empty translation unit [-Werror=pedantic]
 #endif
 
cc1: all warnings being treated as errors
In file included from headers.c:17,
                 from global_structs.c:10:
global_variables.c:12:1: error: unknown type name 'Airport'
 Airport currente_airports[MAXAIRPORTS];
 ^~~~~~~
global_variables.c:15:1: error: unknown type name 'Flight'
 Flight currente_flights[MAXFLIGHTS];
 ^~~~~~
global_variables.c:18:1: error: unknown type name 'Date'
 Date current_date = {DIA_INICIAL, MES_INICIAL, ANO_INICIAL};
 ^~~~
In file included from headers.c:15,
                 from global_structs.c:10:
global_defines.c:25:21: error: excess elements in scalar initializer [-Werror]
 #define MES_INICIAL 1
                     ^
global_variables.c:18:35: note: in expansion of macro 'MES_INICIAL'
 Date current_date = {DIA_INICIAL, MES_INICIAL, ANO_INICIAL};
                                   ^~~~~~~~~~~
global_defines.c:25:21: note: (near initialization for 'current_date')
 #define MES_INICIAL 1
                     ^
global_variables.c:18:35: note: in expansion of macro 'MES_INICIAL'
 Date current_date = {DIA_INICIAL, MES_INICIAL, ANO_INICIAL};
                                   ^~~~~~~~~~~
global_defines.c:26:21: error: excess elements in scalar initializer [-Werror]
 #define ANO_INICIAL 2022
                     ^~~~
global_variables.c:18:48: note: in expansion of macro 'ANO_INICIAL'
 Date current_date = {DIA_INICIAL, MES_INICIAL, ANO_INICIAL};
                                                ^~~~~~~~~~~
global_defines.c:26:21: note: (near initialization for 'current_date')
 #define ANO_INICIAL 2022
                     ^~~~
global_variables.c:18:48: note: in expansion of macro 'ANO_INICIAL'
 Date current_date = {DIA_INICIAL, MES_INICIAL, ANO_INICIAL};
                                                ^~~~~~~~~~~
In file included from headers.c:19,
                 from global_structs.c:10:
general_gets.c:94:17: error: unknown type name 'Time'
 void print_time(Time time)
                 ^~~~
general_gets.c:100:17: error: unknown type name 'Date'
 void print_date(Date date)
                 ^~~~
general_gets.c:126:1: error: unknown type name 'Date'
 Date get_date()
 ^~~~
general_gets.c: In function 'get_date':
general_gets.c:128:5: error: unknown type name 'Date'
     Date date;
     ^~~~
general_gets.c:129:28: error: request for member 'day' in something not a structure or union
     scanf("%d-%d-%d", &date.day, &date.month, &date.year);
                            ^
general_gets.c:129:39: error: request for member 'month' in something not a structure or union
     scanf("%d-%d-%d", &date.day, &date.month, &date.year);
                                       ^
general_gets.c:129:52: error: request for member 'year' in something not a structure or union
     scanf("%d-%d-%d", &date.day, &date.month, &date.year);
                                                    ^
general_gets.c:132:13: error: request for member 'day' in something not a structure or union
         date.day += (current_char - '0') * 10;
             ^
general_gets.c: At top level:
general_gets.c:137:1: error: unknown type name 'Time'
 Time get_time()
 ^~~~
general_gets.c: In function 'get_time':
general_gets.c:139:5: error: unknown type name 'Time'
     Time time;
     ^~~~
general_gets.c:140:25: error: request for member 'hour' in something not a structure or union
     scanf("%d:%d", &time.hour, &time.minute);
                         ^
general_gets.c:140:37: error: request for member 'minute' in something not a structure or union
     scanf("%d:%d", &time.hour, &time.minute);
                                     ^
general_gets.c: At top level:
general_gets.c:145:17: error: unknown type name 'Date'
 int date_to_int(Date date)
                 ^~~~
general_gets.c:151:17: error: unknown type name 'Time'
 int time_to_int(Time time)
                 ^~~~
general_gets.c:156:24: error: unknown type name 'Date'
 int check_invalid_date(Date new_date)
                        ^~~~
general_gets.c:169:16: error: unknown type name 'Date'
 int same_dates(Date d1, Date d2)
                ^~~~
general_gets.c:169:25: error: unknown type name 'Date'
 int same_dates(Date d1, Date d2)
                         ^~~~
general_gets.c:178:19: error: unknown type name 'Flight'
 void print_flight(Flight flight)
                   ^~~~~~
general_gets.c:231:19: error: unknown type name 'Flight'
 void sort_flights(Flight flights[], int size)
                   ^~~~~~
cc1: all warnings being treated as errors
In file included from headers.c:19,
                 from global_variables.c:10:
general_gets.c: In function 'remove_spaces':
general_gets.c:14:5: error: 'current_char' undeclared (first use in this function); did you mean 'putchar'?
     current_char = getchar();
     ^~~~~~~~~~~~
     putchar
general_gets.c:14:5: note: each undeclared identifier is reported only once for each function it appears in
general_gets.c: In function 'finish_line':
general_gets.c:25:12: error: 'current_char' undeclared (first use in this function); did you mean 'putchar'?
     while (current_char != '\n')
            ^~~~~~~~~~~~
            putchar
In file included from headers.c:12,
                 from global_variables.c:10:
general_gets.c: In function 'get_word':
general_gets.c:35:21: error: 'current_char' undeclared (first use in this function); did you mean 'putchar'?
     while (!isspace(current_char) && current_char != '\n')
                     ^~~~~~~~~~~~
general_gets.c: In function 'get_IDAirport':
general_gets.c:51:21: error: 'current_char' undeclared (first use in this function); did you mean 'putchar'?
     while (!isspace(current_char) && current_char != '\n')
                     ^~~~~~~~~~~~
general_gets.c: In function 'get_pais':
general_gets.c:67:21: error: 'current_char' undeclared (first use in this function); did you mean 'putchar'?
     while (!isspace(current_char))
                     ^~~~~~~~~~~~
In file included from headers.c:19,
                 from global_variables.c:10:
general_gets.c: In function 'get_city':
general_gets.c:83:12: error: 'current_char' undeclared (first use in this function); did you mean 'putchar'?
     while (current_char != '\n')
            ^~~~~~~~~~~~
            putchar
In file included from headers.c:12,
                 from global_variables.c:10:
general_gets.c: In function 'get_date':
general_gets.c:131:17: error: 'current_char' undeclared (first use in this function); did you mean 'putchar'?
     if (isdigit(current_char))
                 ^~~~~~~~~~~~
In file included from headers.c:19,
                 from global_variables.c:10:
general_gets.c: In function 'check_invalid_date':
general_gets.c:160:26: error: 'current_date' undeclared (first use in this function); did you mean 'print_date'?
     c_date = date_to_int(current_date);
                          ^~~~~~~~~~~~
                          print_date